tooling/nargo_cli/tests/snapshots/execution_success/regression_7128/execute__tests__dead_witnesses.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: dead_witnesses
---
Found some dead witnesses in function 0:
 - Dead witnesses in program inputs:
  - in0 (witness w0)
warning: Dead witnesses {w2,..,w33}
    ┌─ std/field/mod.nr:175:9
    │
175 │         __to_be_radix(self, radix)
    │         --------------------------
    │
    = Call stack:
      1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:8:38
      2. std/field/mod.nr:138:21

warning: Dead witnesses {w34,..,w35, w38,..,w39, w44,..,w47, w54,..,w57, w64,..,w67, w74,..,w77, w84,..,w87, w94,..,w97, w104,..,w107, w114,..,w117, w124,..,w127, w134,..,w137, w144,..,w147, w154,..,w157, w164,..,w167, w174,..,w177, w184,..,w187, w194,..,w197, w204,..,w207, w214,..,w217, w224,..,w227, w234,..,w237, w244,..,w247, w254,..,w257, w264,..,w267, w274,..,w277, w284,..,w287, w294,..,w297, w304,..,w307, w314,..,w321}
    ┌─ std/field/mod.nr:147:25
    │
147 │                     if (bytes[i] != p[i]) {
    │                         ----------------
    │
    = Call stack:
      1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:8:38

warning: Dead witnesses {w36,..,w37, w40,..,w43, w48,..,w53, w58,..,w63, w68,..,w73, w78,..,w83, w88,..,w93, w98,..,w103, w108,..,w113, w118,..,w123, w128,..,w133, w138,..,w143, w148,..,w153, w158,..,w163, w168,..,w173, w178,..,w183, w188,..,w193, w198,..,w203, w208,..,w213, w218,..,w223, w228,..,w233, w238,..,w243, w248,..,w253, w258,..,w263, w268,..,w273, w278,..,w283, w288,..,w293, w298,..,w303, w308,..,w313, w322,..,w324}
    ┌─ std/field/mod.nr:148:32
    │
148 │                         assert(bytes[i] < p[i]);
    │                                ---------------
    │
    = Call stack:
      1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:8:38

warning: Dead witnesses {w325,..,w326}
    ┌─ std/field/bn254.nr:100:15
    │
100 │     } else if a == b {
    │               ------
    │
    = Call stack:
      1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
      2. std/field/mod.nr:199:13
      3. std/field/bn254.nr:117:5

warning: Dead witnesses {w327}
    ┌─ std/field/bn254.nr:105:16
    │
105 │             if field_less_than(a, b) {
    │                ---------------------
    │
    = Call stack:
      1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
      2. std/field/mod.nr:199:13
      3. std/field/bn254.nr:117:5

warning: Dead witnesses {w328}
   ┌─ std/field/mod.nr:17:9
   │
17 │         __assert_max_bit_size(self, BIT_SIZE);
   │         -------------------------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:106:17
     5. std/field/bn254.nr:82:23
     6. std/field/bn254.nr:68:13
     7. std/field/bn254.nr:45:9

warning: Dead witnesses {w329}
   ┌─ std/field/mod.nr:17:9
   │
17 │         __assert_max_bit_size(self, BIT_SIZE);
   │         -------------------------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:106:17
     5. std/field/bn254.nr:82:23
     6. std/field/bn254.nr:68:13
     7. std/field/bn254.nr:46:9

warning: Dead witnesses {w330,..,w331}
   ┌─ std/field/bn254.nr:58:30
   │
58 │             let (xlo, xhi) = decompose_hint(x);
   │                              -----------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:106:17
     5. std/field/bn254.nr:83:23

warning: Dead witnesses {w332,..,w333}
   ┌─ std/field/mod.nr:17:9
   │
17 │         __assert_max_bit_size(self, BIT_SIZE);
   │         -------------------------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:106:17
     5. std/field/bn254.nr:83:23
     6. std/field/bn254.nr:61:13

warning: Dead witnesses {w334}
   ┌─ std/field/mod.nr:17:9
   │
17 │         __assert_max_bit_size(self, BIT_SIZE);
   │         -------------------------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:106:17
     5. std/field/bn254.nr:83:23
     6. std/field/bn254.nr:62:13

warning: Dead witnesses {w370,..,w371}
   ┌─ std/field/bn254.nr:65:23
   │
65 │             assert_eq(x, xlo + TWO_POW_128 * xhi);
   │                       --------------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:106:17
     5. std/field/bn254.nr:83:23

warning: Dead witnesses {w335}
   ┌─ std/field/bn254.nr:40:22
   │
40 │         let borrow = lte_hint(alo, blo);
   │                      ------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:106:17
     5. std/field/bn254.nr:83:23
     6. std/field/bn254.nr:68:13

warning: Dead witnesses {w336, w372}
   ┌─ std/field/mod.nr:17:9
   │
17 │         __assert_max_bit_size(self, BIT_SIZE);
   │         -------------------------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:106:17
     5. std/field/bn254.nr:83:23
     6. std/field/bn254.nr:68:13
     7. std/field/bn254.nr:45:9

warning: Dead witnesses {w337}
   ┌─ std/field/mod.nr:17:9
   │
17 │         __assert_max_bit_size(self, BIT_SIZE);
   │         -------------------------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:106:17
     5. std/field/bn254.nr:83:23
     6. std/field/bn254.nr:68:13
     7. std/field/bn254.nr:46:9

warning: Dead witnesses {w338}
   ┌─ std/field/bn254.nr:40:22
   │
40 │         let borrow = lte_hint(alo, blo);
   │                      ------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:106:17
     5. std/field/bn254.nr:86:9

warning: Dead witnesses {w339, w373}
   ┌─ std/field/mod.nr:17:9
   │
17 │         __assert_max_bit_size(self, BIT_SIZE);
   │         -------------------------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:106:17
     5. std/field/bn254.nr:86:9
     6. std/field/bn254.nr:45:9

warning: Dead witnesses {w340}
   ┌─ std/field/mod.nr:17:9
   │
17 │         __assert_max_bit_size(self, BIT_SIZE);
   │         -------------------------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:106:17
     5. std/field/bn254.nr:86:9
     6. std/field/bn254.nr:46:9

warning: Dead witnesses {w341,..,w342}
   ┌─ std/field/bn254.nr:58:30
   │
58 │             let (xlo, xhi) = decompose_hint(x);
   │                              -----------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:109:17
     5. std/field/bn254.nr:82:23

warning: Dead witnesses {w343,..,w344}
   ┌─ std/field/mod.nr:17:9
   │
17 │         __assert_max_bit_size(self, BIT_SIZE);
   │         -------------------------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:109:17
     5. std/field/bn254.nr:82:23
     6. std/field/bn254.nr:61:13

warning: Dead witnesses {w345}
   ┌─ std/field/mod.nr:17:9
   │
17 │         __assert_max_bit_size(self, BIT_SIZE);
   │         -------------------------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:109:17
     5. std/field/bn254.nr:82:23
     6. std/field/bn254.nr:62:13

warning: Dead witnesses {w375,..,w376}
   ┌─ std/field/bn254.nr:65:23
   │
65 │             assert_eq(x, xlo + TWO_POW_128 * xhi);
   │                       --------------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:109:17
     5. std/field/bn254.nr:82:23

warning: Dead witnesses {w346}
   ┌─ std/field/bn254.nr:40:22
   │
40 │         let borrow = lte_hint(alo, blo);
   │                      ------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:109:17
     5. std/field/bn254.nr:82:23
     6. std/field/bn254.nr:68:13

warning: Dead witnesses {w347, w377}
   ┌─ std/field/mod.nr:17:9
   │
17 │         __assert_max_bit_size(self, BIT_SIZE);
   │         -------------------------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:109:17
     5. std/field/bn254.nr:82:23
     6. std/field/bn254.nr:68:13
     7. std/field/bn254.nr:45:9

warning: Dead witnesses {w348}
   ┌─ std/field/mod.nr:17:9
   │
17 │         __assert_max_bit_size(self, BIT_SIZE);
   │         -------------------------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:109:17
     5. std/field/bn254.nr:82:23
     6. std/field/bn254.nr:68:13
     7. std/field/bn254.nr:46:9

warning: Dead witnesses {w349}
   ┌─ std/field/mod.nr:17:9
   │
17 │         __assert_max_bit_size(self, BIT_SIZE);
   │         -------------------------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:109:17
     5. std/field/bn254.nr:83:23
     6. std/field/bn254.nr:68:13
     7. std/field/bn254.nr:45:9

warning: Dead witnesses {w350}
   ┌─ std/field/mod.nr:17:9
   │
17 │         __assert_max_bit_size(self, BIT_SIZE);
   │         -------------------------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:109:17
     5. std/field/bn254.nr:83:23
     6. std/field/bn254.nr:68:13
     7. std/field/bn254.nr:46:9

warning: Dead witnesses {w351}
   ┌─ std/field/bn254.nr:40:22
   │
40 │         let borrow = lte_hint(alo, blo);
   │                      ------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:109:17
     5. std/field/bn254.nr:86:9

warning: Dead witnesses {w352, w378}
   ┌─ std/field/mod.nr:17:9
   │
17 │         __assert_max_bit_size(self, BIT_SIZE);
   │         -------------------------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:109:17
     5. std/field/bn254.nr:86:9
     6. std/field/bn254.nr:45:9

warning: Dead witnesses {w353}
   ┌─ std/field/mod.nr:17:9
   │
17 │         __assert_max_bit_size(self, BIT_SIZE);
   │         -------------------------------------
   │
   = Call stack:
     1. /Users/asterite/Projects/noir/test_programs/execution_success/regression_7128/src/main.nr:16:9
     2. std/field/mod.nr:199:13
     3. std/field/bn254.nr:117:5
     4. std/field/bn254.nr:109:17
     5. std/field/bn254.nr:86:9
     6. std/field/bn254.nr:46:9

Dead witnesses found in circuit
