tooling/nargo_cli/tests/snapshots/execution_success/regression_7128/execute__tests__force_brillig_false_inliner_-9223372036854775808_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----
[regression_7128] Circuit output: Field(0)
----- stderr -----
warning: Return variable contains a constant value
   ┌─ src/main.nr:25:5
   │
25 │     out0
   │     ---- This variable contains a value which is constrained to be a constant. Consider removing this value as additional return values increase proving/verification time
   │
   = Call stack:
     1. src/main.nr:25:5
