tooling/nargo_cli/tests/snapshots/execution_success/regression_7128/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v3: Field):
    (no terminator instruction)
}
[regression_7128] Circuit output: 0x00
